tests/ui/field_not_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
 --> tests/ui/field_not_clone.rs:5:10
  |
5 | #[derive(PureClone)]
  |          ^^^^^^^^^ the trait `Clone` is not implemented for `Foo`
  |
  = note: this error originates in the derive macro `PureClone` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo` with `#[derive(Clone)]`
  |
3 + #[derive(Clone)]
4 | struct Foo;
  |

error[E0277]: the trait bound `Foo: PureClone` is not satisfied
 --> tests/ui/field_not_clone.rs:7:8
  |
7 |     f: Foo,
  |        ^^^ the trait `PureClone` is not implemented for `Foo`
  |
help: consider borrowing here
  |
7 |     f: &Foo,
  |        +
